# src/lib/api/model/index.ts
@@ -10,9 +10,13 @@ export * from "./acceptClinicInvitationDto";
 export * from "./acceptInvitationDto";
 export * from "./aiStateResponseDto";
 export * from "./analyticsSummaryDto";
+export * from "./authControllerGetProfile200";
+export * from "./authControllerGetProfile200User";
+export * from "./authControllerGetProfile200UserLocale";
 export * from "./authControllerLogout200";
 export * from "./authControllerRefreshTokens200";
 export * from "./authControllerRefreshTokens200User";
+export * from "./authControllerRefreshTokens200UserLocale";
 export * from "./bulkReorderStagesDto";
 export * from "./consumeRecoveryDto";
 export * from "./conversationsControllerGetConversationsFilter";
@@ -50,10 +54,13 @@ export * from "./leadsControllerFindAllPriority";
 export * from "./leadsControllerFindAllStatus";
 export * from "./leadsPaginatedResponseDto";
 export * from "./leadsPaginatedResponseDtoMeta";
+export * from "./localeResponseDto";
+export * from "./localeResponseDtoLocale";
 export * from "./loginDto";
 export * from "./manualMessageResponseDto";
 export * from "./manualMessageResponseDtoDeliveryStatus";
 export * from "./notificationsControllerGetNotifications200Item";
+export * from "./notificationsControllerGetNotifications200ItemParams";
 export * from "./notificationsControllerGetNotificationsParams";
 export * from "./notificationsControllerMarkAllAsRead200";
 export * from "./notificationsControllerMarkOneAsRead200";
@@ -73,9 +80,11 @@ export * from "./updateLeadDtoStatus";
 export * from "./updateLeadSourceDto";
 export * from "./updateLeadStageDto";
 export * from "./updateLeadStageDtoStatus";
+export * from "./updateLocaleDto";
 export * from "./updatePipelineStageDto";
 export * from "./updatePipelineStageDtoMappedStatus";
 export * from "./uploadDocumentDto";
 export * from "./upsertAiPersonaDto";
 export * from "./upsertAiPersonaDtoBusinessRules";
+export * from "./userLocale";
 export * from "./webhooksControllerVerifyWebhookParams";
